messagepack-derive/tests/fail/map_and_array.stderr
error: `map` and `array` are mutually exclusive
 --> tests/fail/map_and_array.rs:5:16
  |
5 | #[msgpack(map, array)]
  |                ^^^^^
